# api/app/Http/Controllers/API/AuthController.php
@@ -6,38 +6,18 @@ namespace App\Http\Controllers\API;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\UserResource;
 use App\Models\Enums\UserRole;
+use App\Models\Image;
 use App\Models\User;
 use Auth;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
+use Ramsey\Uuid\Uuid;
 use Symfony\Component\HttpFoundation\Response;
 
 class AuthController extends Controller
 {
-    public function register(Request $request): JsonResponse
-    {
-        $validationRules = [
-            User::NAME => 'required|string|max:255',
-            User::EMAIL => 'required|string|email|max:255|unique:users',
-            User::PASSWORD => 'required|string|min:8',
-            User::ROLE_ID => 'required|integer|min:1|exists:roles,id',
-            User::UNIT_ID => 'required|integer|min:1|exists:units,id'
-        ];
-
-        if (!$this->validateRequestData($request, $validationRules)) {
-            return $this->errorResponse($this->validationErrors);
-        }
-
-        $requestData = $request->all();
-        $requestData[User::PASSWORD] = Hash::make($requestData[User::PASSWORD]);
-        $requestData[User::PASSWORD_CHANGE_IS_REQUIRED] = true;
-
-        $user = User::create($requestData);
-
-        return $this->successResponse($this->getResponseData($user, null));
-    }
-
     public function login(Request $request): JsonResponse
     {
         $validationRules = [
@@ -80,6 +60,33 @@ class AuthController extends Controller
         $this->currentUser->tokens()->delete();
 
         return $this->successResponse();
+    }
+
+    public function setPassword(Request $request, string $uuid): JsonResponse
+    {
+        $validationRules = [
+            User::PASSWORD => 'required|string|min:8',
+        ];
+
+        if (!$this->validateRequestData($request, $validationRules)) {
+            return $this->errorResponse($this->validationErrors);
+        }
+
+        $user = User::wherePasswordChangeToken($uuid)->first();
+
+        if(!$user) {
+            return $this->errorResponse(['uuid' => ['Token not found.']], Response::HTTP_NOT_FOUND);
+        }
+
+        $requestData = $request->all();
+
+        $user->password = Hash::make($requestData[User::PASSWORD]);
+        $user->password_change_token = null;
+        $user->password_change_is_required = false;
+
+        $user->save();
+
+        return $this->successResponse(null, Response::HTTP_NO_CONTENT);
     }
 
     private function getResponseData(User $user, ?string $token): array
